timer.{cpp->cc}, errors are now in common header

--- a/fcl/CMakeLists.txt
+++ b/fcl/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_executable(fcl frontend.cc examples.cu kernels.cu timer.cpp)
+add_executable(fcl frontend.cc examples.cu kernels.cu timer.cc error.cu)
