Adding divergence examples

--- a/fcl/CMakeLists.txt
+++ b/fcl/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(fcl frontend.cc examples.cu kernels.cu timer.cc error.cu)
+add_executable(fcl frontend.cc examples.cu kernels.cu timer.cc error.cu
+                   divergent_kernels.cu)
