--- a/fcl/CMakeLists.txt
+++ b/fcl/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_executable(fcl frontend.cc examples.cu kernels.cu timer.cc error.cu
-                   divergent_kernels.cu)
+add_executable(
+  fcl
+  frontend.cc
+  examples.cu
+  kernels.cu
+  timer.cc
+  error.cu
+  divergent_kernels.cu
+  types.cc)
